force-app/main/default/objects/Exam_Answer__c/Exam_Answer__c.object-meta.xml
<CustomObject>
    <label>Exam Answer</label>
    <nameField>
        <displayFormat>Res-{0000}</displayFormat>
        <label>Exam Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exam Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>