force-app/main/default/objects/Exam_Answer__c/fields/Answer_Option__c.field-meta.xml
<CustomField>
    <fullName>Answer_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Answer Option</label>
    <referenceTo>Answer_Option__c</referenceTo>
    <relationshipLabel>Exam Answers</relationshipLabel>
    <relationshipName>Exam_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>