force-app/main/default/objects/Exam_Answer__c/fields/Exam_Result__c.field-meta.xml
<CustomField>
    <fullName>Exam_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exam Result</label>
    <referenceTo>Exam_Result__c</referenceTo>
    <relationshipLabel>Exam Answers</relationshipLabel>
    <relationshipName>Exam_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>