force-app/main/default/objects/Exam_Answer__c/fields/Is_Correct__c.field-meta.xml
<CustomField>
    <fullName>Is_Correct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Correct</label>
    <type>Checkbox</type>
</CustomField>